# cmake-tutorial

./: .gitignore  CMakeLists.txt  main.cpp  version.h  version.h.in
